[package]
name = "termin-8"
version = "0.1.5"
authors = ["Tobias V. Langhoff <tobias@langhoff.no>"]
edition = "2021"
license = "MIT"
description = "CHIP-8 emulator that runs in your terminal"
repository = "https://github.com/tobiasvl/termin-8"
categories = ["emulators"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["cargo"] }
#rand = "0.8.4"
crossterm = "0.24"
#drawille = "0.3"
rust-ini = "0.18"
dirs = "4.0"
ansi_colours = "^1.0"
#deca = { path = "../deca" }
octopt = "0.1"
deca = "0.0.8"
