[package]
name = "termin-8"
version = "0.1.6"
authors = ["Tobias V. Langhoff <tobias@langhoff.no>"]
edition = "2021"
license = "MIT"
description = "CHIP-8 emulator that runs in your terminal"
repository = "https://github.com/tobiasvl/termin-8"
categories = ["emulators"]

[dependencies]
clap = { version = "3.2", features = ["cargo"] }
crossterm = "0.24"
drawille = "0.3"
rust-ini = "0.18"
dirs = "4.0"
ansi_colours = "1.1"
#deca = { path = "../deca" }
octopt = "0.1"
deca = "0.0.9"
anyhow = "1.0"